--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,19 @@
 {
-    "name": "최클라우드",
+    "name": "My Cloud Box Pro",
     "short_name": "CloudBox",
-    "description": "인 클라우드 저장소",
-    "start_url": "./index.html",
+    "description": "Firebase 기반의 개인 클라우드 저장소",
+    // start_url을 리포지토리 경로로 지정
+    "start_url": "/youtube/index.html", 
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#1b74e4",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            // 아이콘 경로도 리포지토리 경로를 기준으로 지정
+            "src": "/youtube/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
+        // ... 나머지 아이콘
     ]
 }
