--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,23 @@
 {
-    "name": "My Cloud Box Pro",
+    "name": "최클라우드",
     "short_name": "CloudBox",
-    "description": "Firebase 기반의 개인 클라우드 저장소",
-    // start_url을 리포지토리 경로로 지정
+    "description": "개인 클라우드 저장소",
     "start_url": "/youtube/index.html", 
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#1b74e4",
 "icons": [
     {
-        "src": "/youtube/icons/icon-192x192.png", // 안드로이드의 일반적인 사용 크기
+        "src": "/youtube/icons/icon-192x192.png", 
         "sizes": "192x192",
         "type": "image/png"
     },
     {
-        "src": "/youtube/icons/icon-512x512.png", // 스플래시 화면 및 고해상도 크기
+        "src": "/youtube/icons/icon-512x512.png", 
         "sizes": "512x512",
         "type": "image/png"
     }
-    // 더 완벽한 호환성을 원하면 여기에 다른 크기를 추가할 수 있습니다.
 ]
 }
+
 
