--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,23 @@
     "name": "최클라우드",
     "short_name": "CloudBox",
     "description": "개인 클라우드 저장소",
-    "start_url": "/youtube/index.html", 
+    // 💡 수정: index.html을 제거하고 리포지토리 폴더를 시작 경로로 지정
+    "start_url": "/youtube/", 
+    
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#1b74e4",
-"icons": [
-    {
-        "src": "/youtube/icons/icon-192x192.png", 
-        "sizes": "192x192",
-        "type": "image/png"
-    },
-    {
-        "src": "/youtube/icons/icon-512x512.png", 
-        "sizes": "512x512",
-        "type": "image/png"
-    }
-]
+    "icons": [
+        {
+            // 💡 수정: 파일 경로는 리포지토리 이름 없이 상대 경로로 유지하는 것이 좋습니다.
+            "src": "./icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "./icons/icon-512x512.png", 
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
-
-
