--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "최클라우드",
-    "short_name": "CloudBox",
-    "description": "개인 클라우드 저장소",
+    "short_name": "최클라우드",
+    "description": "최윤서 클라우드",
     // 💡 수정: index.html을 제거하고 리포지토리 폴더를 시작 경로로 지정
     "start_url": "/youtube/", 
     
@@ -22,3 +22,4 @@
         }
     ]
 }
+
