--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,9 @@
         }
     ],
     "share_target": {
-        "action": "/youtube/",
+        "action": "/youtube/", 
         "method": "GET",
+        "enctype": "application/x-www-form-urlencoded",
         "params": {
             "title": "title",
             "text": "text",
